Mainpage structure and css basic done
Changed:
-index -> mainpage
-structure done
-link between css establishes
-CSS file added styling for headline but not workling

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,9 +1,3 @@
-/* FILEPATH: /C:/Users/roman/Documents/Workspaces/Private Workspace/Visual Studio Code/MemesEternal/MemeRoleTest/stylesheet/style.css */
-
-/* Style the first div */
-div {
-    background-color: red;
-    color: white;
-    padding: 10px;
+.headline {
+text-align: center;
 }
-
